# ThrowItBot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
picture/: Komeiji.Satori.full.1574996.psd  p.psd  pic.psd
src/: Global.h  InlineQuery.cpp  InlineQuery.h  Log.h  StringCheck.h  Tg.cpp  Tg.h  Throw.cpp  Throw.h  ThrowIt.cpp  ThrowIt.h  UsersData.cpp  UsersData.h  config.h  main.cpp
